--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,8 +53,8 @@ body {
 
 #explore-section .fas,
 #share-head-section .fas {
-    background: #fff;
-    color:rgb(40, 34, 34);
+    background: rgb(68, 184, 81);
+    color:rgb(247, 242, 242);
     padding: 5px;
     border-radius: 5px;
 }
