--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,14 @@ body {
 .bg-light-blue{
     background: #7bd3ff ;
 }
-
-
+.bg-gradient { 
+    background: rgb(95,107,99);
+background: linear-gradient(90deg, rgba(95,107,99,0.9581582633053222) 0%, rgba(9,121,30,1) 53%, rgba(193,255,0,1) 100%);
+  }
+.bg-purple-gradient{
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(198,148,233,1) 100%);
+}
 .navbar {
     border-bottom:#eef0f1 3px solid;
     opacity: 0.8;
