home page update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,34 @@
+:root{
+    --primary-color:#11493E;
+    --secondary-color:#b1b1b1;
+    --primary-rgb:: rgb(17,73,62);
+}
+
 body {
     /* background: rgb(68, 184, 81);  */
     color: rgb(245, 241, 241);
 }
 /* Color  */
-.bg-light-red{
-    background: #ff7365;
+.primary-color{
+    color: var(--primary-color);
 }
-.bg-light-yellow{
-     background: #fdbf50;
-    }
-.bg-light-blue{
-    background: #7bd3ff ;
+.bg-primary-color{
+    background: var(--primary-color);
+}
+.bg-primary-1{
+    background:var(--primary-color);
+    background: linear-gradient(104deg, rgba(17,73,62,1) 44%, rgba(177,177,177,1) 100%);
 }
 .bg-gradient { 
-    background: rgb(95,107,99);
-background: linear-gradient(90deg, rgba(95,107,99,0.9581582633053222) 0%, rgba(9,121,30,1) 53%, rgba(193,255,0,1) 100%);
+    background:var(--primary-color);
+    background: linear-gradient(104deg, rgba(17,73,62,1) 44%, rgba(177,177,177,1) 100%);
+  }
+  .bg-primary-2{
+    background:var(--primary-color);
+    background: linear-gradient(104deg, rgba(17,73,62,1) 44%, rgba(177,177,177,1) 100%);
   }
 .bg-purple-gradient{
-    background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(198,148,233,1) 100%);
+    
 }
 .navbar {
     border-bottom:#eef0f1 3px solid;
@@ -31,7 +41,8 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(198,148,233,1) 
 
 
 #home-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/hero.png);
+   background:var(--primary-color);
+    background: linear-gradient(104deg, rgba(17,73,62,1) 44%, rgba(177,177,177,1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -59,20 +70,19 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(198,148,233,1) 
 
 #explore-section .fas,
 #share-head-section .fas {
-    background: rgb(68, 184, 81);
-    color:rgb(247, 242, 242);
-    padding: 5px;
-    border-radius: 5px;
+    --primary-color:#11493E;
+    --secondary-color:#b1b1b1;
+    --primary-rgb:: rgb(17,73,62);
 }
 
 #share-head-section .fas {
     background: #333;
-    color:#fff;
+    color: #b1b1b1;;
     padding: 5px;
     border-radius: 5px
 }
 .bg-green{
-    background-color: rgb(68, 184, 81);
+    background-color:var(--primary-color);
 }
 .bg-yellow{
     background-color: rgb(68, 184, 81);
@@ -106,7 +116,7 @@ background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(198,148,233,1) 
 }
 #danu p{
     font-size: 22px;
-    color: rgb(10, 9, 9);
+    color: rgb(254, 252, 252);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 #MAM p{
