--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,12 @@ body {
     /* filter: brightness(50%); */
 }
 #service-area{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
+    background:var(--primary-color);
+    background: linear-gradient(104deg,rgba(17,73,62,1) 44%, rgba(177,177,177,1) 100% );
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
+     /* filter: brightness(50%); */
 }
 
 
