--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,3 +143,9 @@ body {
 padding-top: 15px;
 list-style: none;
 }
+#accordion button{
+    color:#11493E;
+    font-size: 20px;
+    font-weight: bold;
+    forced-color:white;
+}
